--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,10 @@
 {
-    "name": "laravelcollective/html",
+    "name": "ImprovingLaborCourts/html",
     "description": "HTML and Form Builders for the Laravel Framework",
     "license": "MIT",
-    "homepage": "https://laravelcollective.com",
     "support": {
-        "issues": "https://github.com/LaravelCollective/html/issues",
-        "source": "https://github.com/LaravelCollective/html"
+        "issues": "https://github.com/ImprovingLaborCourts/html/issues",
+        "source": "https://github.com/ImprovingLaborCourts/html"
     },
     "authors": [
         {
